--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -6,6 +6,18 @@
 	<array>
 		<dict>
 			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>condensed</key>
+			<true/>
+			<key>headerCellClass</key>
+			<string>HBPackageNameHeaderCell</string>
+			<key>icon</key>
+			<string>icon.png</string>
+			<key>packageIdentifier</key>
+			<string>com.misakaproject.macaron</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSSwitchCell</string>
 			<key>cellClass</key>
 			<string>PSSubtitleSwitchTableCell</string>
@@ -50,23 +62,31 @@
 		</dict>
 		<dict>
 			<key>cell</key>
-			<string>PSButtonCell</string>
-			<key>label</key>
-			<string>GitHub</string>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
 			<key>icon</key>
 			<string>icon/github.png</string>
-			<key>action</key>
-			<string>openGithub</string>
+			<key>label</key>
+			<string>Github</string>
+			<key>subtitle</key>
+			<string>Macaron is open source project</string>
+			<key>url</key>
+			<string>https://github.com/shimajiron/macaron</string>
 		</dict>
 		<dict>
 			<key>cell</key>
-			<string>PSButtonCell</string>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
 			<key>icon</key>
 			<string>icon/paypal.png</string>
 			<key>label</key>
 			<string>Donate via PayPal</string>
-			<key>action</key>
-			<string>openPaypal</string>
+			<key>subtitle</key>
+			<string>support me</string>
+			<key>url</key>
+			<string>https://www.paypal.me/sugiuta1203</string>
 		</dict>
 	</array>
 	<key>title</key>
