--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -104,6 +104,20 @@
 			<key>cellClass</key>
 			<string>HBLinkTableCell</string>
 			<key>icon</key>
+			<string>icon/discord.png</string>
+			<key>label</key>
+			<string>Discord</string>
+			<key>subtitle</key>
+			<string>misakaProject</string>
+			<key>url</key>
+			<string>https://discord.gg/bbJAqj7np5</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>icon</key>
 			<string>icon/paypal.png</string>
 			<key>label</key>
 			<string>Donate via PayPal</string>
