--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -80,23 +80,7 @@
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
-			<string>Profile</string>
-			<key>footerText</key>
-			<string>©️Misaka Project 2023 - Macaron</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>cellClass</key>
-			<string>HBLinkTableCell</string>
-			<key>icon</key>
-			<string>icon/github.png</string>
-			<key>label</key>
-			<string>Github</string>
-			<key>subtitle</key>
-			<string>Macaron is open source project</string>
-			<key>url</key>
-			<string>https://github.com/shimajiron/macaron</string>
+			<string>Project</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -118,6 +102,20 @@
 			<key>cellClass</key>
 			<string>HBLinkTableCell</string>
 			<key>icon</key>
+			<string>icon/github.png</string>
+			<key>label</key>
+			<string>Github</string>
+			<key>subtitle</key>
+			<string>Macaron is open source project</string>
+			<key>url</key>
+			<string>https://github.com/shimajiron/macaron</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>icon</key>
 			<string>icon/paypal.png</string>
 			<key>label</key>
 			<string>Donate via PayPal</string>
@@ -125,6 +123,34 @@
 			<string>support me</string>
 			<key>url</key>
 			<string>https://www.paypal.me/sugiuta1203</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Credit</string>
+			<key>footerText</key>
+			<string>©️Misaka Project 2023 - Macaron</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>label</key>
+			<string>sugiuta</string>
+			<key>url</key>
+			<string>https://github.com/sugiuta</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSLinkCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>label</key>
+			<string>straight-tamago</string>
+			<key>url</key>
+			<string>https://bento.me/straight-tamago</string>
 		</dict>
 	</array>
 	<key>title</key>
