--- a/Prefs/Resources/Root.plist
+++ b/Prefs/Resources/Root.plist
@@ -54,6 +54,12 @@
 		</dict>
 		<dict>
 			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Blur</string>
+		</dict>
+		<dict>
+			<key>cell</key>
 			<string>PSSegmentCell</string>
 			<key>label</key>
 			<string>Blur Type</string>
@@ -65,22 +71,84 @@
 			<string>kBlurType</string>
 			<key>validTitles</key>
 			<array>
-				<string>OFF</string>
-				<string>Regular</string>
-				<string>Light Regular</string>
+				<string>Default</string>
+				<string>Adaptive</string>
+				<string>Light</string>
+				<string>Dark</string>
 			</array>
 			<key>validValues</key>
 			<array>
 				<string>0</string>
 				<string>1</string>
 				<string>2</string>
+				<string>3</string>
 			</array>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSSliderCell</string>
+			<key>cellClass</key>
+			<string>SULabelSliderCell</string>
+			<key>label</key>
+			<string>Opacity</string>
+			<key>default</key>
+			<real>1.0</real>
+			<key>defaults</key>
+			<string>com.misakaproject.macaron</string>
+			<key>isSegmented</key>
+			<false/>
+			<key>key</key>
+			<string>kBlurAlpha</string>
+			<key>max</key>
+			<real>1.0</real>
+			<key>min</key>
+			<real>0</real>
+			<key>showValue</key>
+			<true/>
+			<key>PostNotification</key>
+			<string>com.misakaproject.macaron/ReloadPrefs</string>
 		</dict>
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
 			<key>label</key>
-			<string>Project</string>
+			<string>Developers</string>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>label</key>
+			<string>sugiuta</string>
+			<key>url</key>
+			<string>https://github.com/sugiuta</string>
+			<key>iconURL</key>
+			<string>https://github.com/sugiuta.png</string>
+			<key>iconCircular</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSButtonCell</string>
+			<key>cellClass</key>
+			<string>HBLinkTableCell</string>
+			<key>label</key>
+			<string>straight-tamago</string>
+			<key>url</key>
+			<string>https://bento.me/straight-tamago</string>
+			<key>iconURL</key>
+			<string>https://github.com/straight-tamago.png</string>
+			<key>iconCircular</key>
+			<true/>
+		</dict>
+		<dict>
+			<key>cell</key>
+			<string>PSGroupCell</string>
+			<key>label</key>
+			<string>Projects</string>
+			<key>footerText</key>
+			<string>©️Misaka Project 2023 - Macaron</string>
 		</dict>
 		<dict>
 			<key>cell</key>
@@ -123,34 +191,6 @@
 			<string>support me</string>
 			<key>url</key>
 			<string>https://www.paypal.me/sugiuta1203</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>label</key>
-			<string>Developer</string>
-			<key>footerText</key>
-			<string>©️Misaka Project 2023 - Macaron</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>cellClass</key>
-			<string>HBLinkTableCell</string>
-			<key>label</key>
-			<string>sugiuta</string>
-			<key>url</key>
-			<string>https://github.com/sugiuta</string>
-		</dict>
-		<dict>
-			<key>cell</key>
-			<string>PSLinkCell</string>
-			<key>cellClass</key>
-			<string>HBLinkTableCell</string>
-			<key>label</key>
-			<string>straight-tamago</string>
-			<key>url</key>
-			<string>https://bento.me/straight-tamago</string>
 		</dict>
 	</array>
 	<key>title</key>
